# mcp-server-freecad

./: CLAUDE.md  CLAUDE_DESKTOP_CONFIG.md  LICENSE.md  README.md  __main__.py  freecad_mcp_server.py  main.py  pyproject.toml  requirements.txt  run_with_freecad.py  server.py  test_server.py  troubleshoot_setup.py
addon/MCPServerFreeCAD/: InitGui.py
addon/MCPServerFreeCAD/comm_server/: __init__.py  comm_server.py  commands.py  freecad_rpc.py  object.py  parts_library.py  serialize.py  utils.py
src/mcp_server_freecad/: __init__.py  main.py  server.py
